--- a/styles.css
+++ b/styles.css
@@ -679,12 +679,13 @@ body {
 
   .toggle-button {
     display: flex;
+    backdrop-filter: blur(4px);
   }
 
   .item-nav ul {
     width: 100%;
     flex-direction: column;
-    margin-top: 10%;
+    margin-top: 20%;
     margin-left: 5%;
   }
 
@@ -695,20 +696,33 @@ body {
   }
 
   .item-nav a {
-    /* color: #fff; */
+    color: #fff;
   }
 
   .item-nav.active {
     display: flex;
     left: 0;
+    top: 0;
     height: 100vh;
     width: 100%;
+    backdrop-filter: blur(4px);
   }
 
-  body.change {
-    background: #6070FF;
-    mix-blend-mode: multiply;
-    filter: blur(6px);
+  .item-nav .toggle-2 {
+    position: absolute;
+    color: #FFFFFF;
+    width: 25px;
+    height: 20px;
+    top: 1%;
+    left: 93%;
+    border: none;
+    background-color: transparent;
+  }
+
+  .section-1.change {
+    background: #7987ff;
+    width: 100%;
+    height: 100vh;
   }
 
   .dropdown {
