--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,10 @@ a {
   color: black;
 }
 
+ul {
+  border: none;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -159,14 +163,14 @@ body {
   justify-content: space-between;
   width: 18px;
   height: 12px;
-  top: .75rem;
+  top: 0.75rem;
   right: 1rem;
 }
 
 .toggle-button .bar {
   height: 2px;
   width: 100%;
-  background-color: #6070FF;
+  background-color: #6070ff;
   border-radius: 10px;
 }
 
@@ -710,7 +714,7 @@ body {
 
   .item-nav .toggle-2 {
     position: absolute;
-    color: #FFFFFF;
+    color: #fff;
     width: 25px;
     height: 20px;
     top: 1%;
@@ -731,12 +735,12 @@ body {
     position: absolute;
     width: 250px;
     margin-top: 0.3rem;
-    background: #6070FF;
+    background: #6070ff;
     opacity: 0;
   }
 
   .show {
-    transform: translateY(0rem);
+    transform: translateY(0);
     visibility: visible;
     opacity: 1;
   }
@@ -1112,10 +1116,6 @@ body {
 .nav-img {
   position: absolute;
   width: 470px;
-}
-
-ul {
-  border: none;
 }
 
 .tonic-title {
