--- a/styles.css
+++ b/styles.css
@@ -711,6 +711,10 @@ body {
     backdrop-filter: blur(6px);
   }
 
+  body.fixed {
+    position: fixed;
+  }
+
   .item-nav .toggle-2 {
     position: absolute;
     color: #fff;
@@ -720,12 +724,14 @@ body {
     left: 93%;
     border: none;
     background-color: transparent;
+    opacity: 1;
   }
 
   .section-1.change {
     background: #6070ff;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
   }
 
   .dropdown {
