--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
 a {
   margin-right: 10px;
   text-decoration: none;
-  color: #396DF2;
+  color: #396df2;
 }
 
 ul {
@@ -276,7 +276,7 @@ body {
   height: 120vh;
   display: none;
   z-index: 10;
-  border: 1px solid #EBECF0;
+  border: 1px solid #ebecf0;
   left: 5%;
   top: 5%;
 }
@@ -381,6 +381,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .popup-img {
   display: flex;
   background-image: url('images/Snapshoot Portfolio.png');
@@ -404,7 +405,7 @@ body {
   background-color: white;
   border-radius: 8px;
   border: 1px solid #6070ff;
-  color: #396DF2;
+  color: #396df2;
   padding: 8px;
   font-weight: 700;
   width: 124px;
@@ -425,7 +426,6 @@ body {
 }
 
 @media (max-width: 700px) {
-
   .uber-popup,
   .facebook-popup,
   .multi-popup,
@@ -446,7 +446,7 @@ body {
     height: 2px;
     width: 95%;
     border-radius: 10px;
-    background-color: #EBECF0;
+    background-color: #ebecf0;
     align-self: center;
   }
 
@@ -458,7 +458,7 @@ body {
     background-color: white;
     border-radius: 8px;
     border: 1px solid #6070ff;
-    color: #396DF2;
+    color: #396df2;
     padding: 12px 22px;
     font-weight: 700;
     width: 156px;
@@ -475,7 +475,7 @@ body {
   .toggle-popup3,
   .toggle-popup2,
   .toggle-popup {
-   margin-left: 90%; 
+    margin-left: 90%;
   }
 }
 
